--- a/css/materialize.css
+++ b/css/materialize.css
@@ -980,11 +980,11 @@
 }
 
 .teal {
-  background-color: #009688 !important;
+  background-color: #0288D1 !important;
 }
 
 .teal-text {
-  color: #009688 !important;
+  color: #0288D1 !important;
 }
 
 .teal.lighten-5 {
