--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,23 @@ p {
     width: 100%;
   }
 
+
+.sombra{
+      text-shadow: 0px 1px #0288d1;
+}
+
+
+
+nav ul a {
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.icon-block .material-icons {
+  color: #0288D1;
+
+}
+
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
     position: absolute;
@@ -55,3 +72,5 @@ p {
 footer.page-footer {
   margin: 0;
 }
+
+
