--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,10 @@ nav ul a {
 
 .icon-block .material-icons {
   color: #0288D1;
+}
 
+.btn:hover, .btn-large:hover {
+    background-color: #03A9F4;
 }
 
 @media only screen and (max-width : 992px) {
